welcome.lessons.welcome.variables.RunFour.scala.code
var i = 0;
while(!i=4){
 	avance();
}
